@@ -17,6 +17,8 @@ TODO: document requirements for function pointers and calling conventions.
 
 	- prefer noexcept over throw () with C++ 11.
         - update ecb.h due to incompatibilities with c11.
+        - fix a potentgial aliasing issue when reading and writing
+          watcher callbacks.
 
 4.19 Thu Sep 25 08:18:25 CEST 2014
 	- ev.h wasn't valid C++ anymore, which tripped compilers other than
